# attack-traffic-generator

./: .gitignore  Dockerfile  README.md  Vagrantfile  attacker_provision.sh  attacker_provision.templ  c2commands  dev-requirements.txt  handler.rc  pyproject.toml  range.yml  script_generator  start.sh  startrange.py  victim_provision.sh  victim_provision.templ
analyzer/: README.md  pyproject.toml
cobaltstrike/: .gitignore  README.md  Vagrantfile  attacker_provision.templ  commands.cna  range.yml  startcs  victim_provision.ps1.templ  whitetraffic.ps1
msf/: attacker_provision.templ  handler.rc.templ  range.yml  startmsf
templates/: README.md  Vagrantfile  beacon.ps1  beacon.sh  benign.sh  c2commands.cna  c2commands.sh  c2servers.sh  cs-server.sh  cs.sh  msf-server.sh  msf.sh  victim.ps1
