[project]
name = "c2-traffic-analyzer"
description = "Default template for PDM package"
authors = [
  {name = "Leo", email = "leetschau@gmail.com"},
]

version = "0.1.0"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
  "Jinja2>=3.1.4",
  "PyYaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "polars>=1.3.0",
  "pandas",
  "matplotlib",
  "zat",
  "pyarrow",
]

[project.urls]
Repository = "https://github.com/leetschau/attack-traffic-generator"
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Changelog = "https://github.com/leetschau/myproejct/blob/master/CHANGELOG.md"

[project.scripts]
tranalyzer = "c2_traffic_analyzer.app:main"
