[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["Leo <cli4168@hillstonenet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scapy = "^2.5.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
cryptography = "^42.0.8"
pyx = "^0.16"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
